fixed spacing for *.scss component files

--- a/client/src/app/Components/sidebar/sidebar.component.scss
+++ b/client/src/app/Components/sidebar/sidebar.component.scss
@@ -1,76 +1,1 @@
-/*
- * Sidebar
- */
-
-.navbar-toggler {
-  top: .25rem;
-  right: 1rem;
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  margin-bottom: 55px; /*Height of the header */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-
-@media (max-width: 767.98px) {
-  .sidebar {
-    top: 5rem;
-  }
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
-
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover {
-  color: inherit;
-}
-
-//.dropdown-toggle::after {
-////  display: block;
-////  position: absolute;
-////  top: 50%;
-////  right: 20px;
-//  transform: translateY(-50%);
-//}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
-
-hr.divider {
-  border-top: 1px solid #8c8b8b;
-}
+/* * Sidebar */.navbar-toggler {  top: .25rem;  right: 1rem;}.sidebar {  position: fixed;  top: 0;  bottom: 0;  left: 0;  z-index: 100; /* Behind the navbar */  padding: 48px 0 0; /* Height of navbar */  margin-bottom: 55px; /*Height of the header */  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);}@media (max-width: 767.98px) {  .sidebar {    top: 5rem;  }}.sidebar-sticky {  position: relative;  top: 0;  height: calc(100vh - 48px);  padding-top: .5rem;  overflow-x: hidden;  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */}@supports ((position: -webkit-sticky) or (position: sticky)) {  .sidebar-sticky {    position: -webkit-sticky;    position: sticky;  }}.sidebar .nav-link {  font-weight: 500;  color: #333;}.sidebar .nav-link {  margin-right: 4px;  color: #999;}.sidebar .nav-link.active {  color: #007bff;}.sidebar .nav-link:hover {  color: inherit;}//.dropdown-toggle::after {////  display: block;////  position: absolute;////  top: 50%;////  right: 20px;//  transform: translateY(-50%);//}.sidebar-heading {  font-size: .75rem;  text-transform: uppercase;}
